--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -11,6 +11,14 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 
+// $skinLogo: url("cbz-logo-color.png") no-repeat 0 0;
+$skinLogo: none;
+$skinActiveColor: #2ab081;
+$skinHeaderBck: #8A2A88; 
+$panelHeaderBck: #2f2f2f;
+
+@import "active_skin";
+
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
