--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -11,13 +11,19 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 
-// $skinLogo: url("cbz-logo-color.png") no-repeat 0 0;
-$skinLogo: none;
+$skinLogo: url("https://s3.amazonaws.com/cannabiz-network/pages/png.svg") no-repeat 0 0;
+
+// $skinLogo: none;
 $skinActiveColor: #2ab081;
 $skinHeaderBck: #8A2A88; 
 $panelHeaderBck: #2f2f2f;
 
 @import "active_skin";
+
+h1#site_title {
+	background-position-x: 50% !important;
+	background-size: 35% !important;
+}
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
